--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Django = "3.1.6"
 psycopg2-binary = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
+ptvsd = "^4.3.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
