Map docker volume for the code folder. Now, changes will persist in local code folder when the Django app running inside docker makes a change in the code folder inside Docker container

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - "3000:3000"
     env_file:
       - ./.env
+    volumes:
+      - ${PROJECT_PATH}:/code
     depends_on:
       - db
 
